# crawler-economias

./: .gitignore  README.md  pyproject.toml  run.bat
src/me_crawler/: analytics.py  auth.py  cli.py  client.py  config.py  dashboard.py  exporter.py  store.py
src/me_crawler/templates/: dashboard.html
tests/: test_analytics.py  test_cookies.py  test_exporter.py  test_pagination.py
