[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "me-crawler"
version = "1.0.0"
description = "Crawler do Minhas Economias: sincroniza transações para MongoDB e gera dashboard HTML"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "requests>=2.31",
    "pymongo>=4.6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "requests-mock>=1.11",
]

[project.scripts]
me-crawler = "me_crawler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
me_crawler = ["templates/*.html"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
